--- a/src/com/JPrincipal.form
+++ b/src/com/JPrincipal.form
@@ -198,7 +198,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="Crepz Player 1.0"/>
+    <Property name="title" type="java.lang.String" value="Crepz Player Beta"/>
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="ff" green="ff" red="ff" type="rgb"/>
     </Property>
