--- a/src/com/help/JHelp.form
+++ b/src/com/help/JHelp.form
@@ -1,4 +1,4 @@
-<?xml version="1.1" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
@@ -39,8 +39,8 @@
       <SubComponents>
         <Component class="javax.swing.JEditorPane" name="jEditorPane1">
           <AuxValues>
-            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JEditorPane(new File(getClass().getResource(&quot;/com/help/Help.html&quot;).toURI()).toURL());"/>
-            <AuxValue name="JavaCodeGenerator_CreateCodePost" type="java.lang.String" value="}catch(Exception ex){&#xd;&#xa;    ex.printStackTrace();&#xd;&#xa;}"/>
+            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JEditorPane(getClass().getResource(&quot;/com/help/Help.html&quot;).toURI().toURL())"/>
+            <AuxValue name="JavaCodeGenerator_CreateCodePost" type="java.lang.String" value="}catch(Exception ex){&#xa;    ex.printStackTrace();&#xa;}"/>
             <AuxValue name="JavaCodeGenerator_CreateCodePre" type="java.lang.String" value="try{"/>
           </AuxValues>
         </Component>
